--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/tests4j"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tests4j.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gwt_refs.adligo.org"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
