--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="output" path="classes_e"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/tests4j.adligo.org"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gwt_refs.adligo.org"/>
-	<classpathentry kind="output" path="bin"/>
 </classpath>
